--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ development:
   encoding: unicode
   database: store_development
   pool:     5
-  username: store
+  username: 
   password:
   template: template0
 
@@ -46,7 +46,7 @@ test:
   encoding: unicode
   database: store_test
   pool:     5
-  username: store
+  username: 
   password:
   template: template0
 
@@ -56,6 +56,6 @@ production:
   encoding: unicode
   database: store_production
   pool:     5
-  username: store
+  username: 
   password:
   template: template0
